--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,7 +30,9 @@ target 'dotodo' do
 
   # Flags change depending on the env values.
   flags = get_default_flags()
-
+  pod 'Firebase/CoreOnly', '10.15.0'
+  pod 'GoogleUtilities', '7.11.5', :modular_headers => true
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
