--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator=\"iPhone 15 Pro Max\"",
+    "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "npx react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.6.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-camera-kit": "^13.0.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-rectangle-scanner": "^1.0.10",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^13.14.0",
+    "react-native-view-shot": "^3.8.0",
+    "react-native-vision-camera": "^3.6.4",
+    "react-native-worklets-core": "^0.2.2",
+    "vision-camera-image-labeler": "^0.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
